vendor/cargo/parameterized-macro-1.1.0/tests/fail/no_param_nr2.stderr
error: custom attribute panicked
 --> $DIR/no_param_nr2.rs:3:1
  |
3 | #[parameterized(x = { 1, 2, 3 }, y = { 1, 2, 3 })]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: [parameterized-macro] error: Unable to find value for parameter 'x2' (case #0)
